# wordle-words

./: .gitignore  README.md  pyproject.toml  words.py
.github/: tests.yml
.github/workflows/: tests.yml
src/: main.py  utils.py  words.py
src/wordle_manager/: cli.py  main.py  utils.py  words.py
tests/: test_basic.py  test_cli.py  test_main.py  test_wordlist_manager.py  tests.py
utils/: utils.py
